--- a/all.css
+++ b/all.css
@@ -154,13 +154,14 @@ h2{
 }
 /*992 ipad版本*/
 /*767以下手機版本*/
-
 @media(max-width:767px){
     .top{
-        background-image: url("");
+        background-image: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/bg_home_sm.svg");
         background-repeat: no-repeat;
         background-size: 334px 245px;
-        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 334px 245px;
+        background-position: bottom;
         width: 100%;
         height: 100%;
 
