--- a/all.css
+++ b/all.css
@@ -152,6 +152,18 @@ h2{
     width: 100%;
     height: 100%;
 }
+@media(max-width:767px){
+    .top{
+        background-image: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/bg_home_sm.svg");
+        background-repeat: no-repeat;
+        background-size: 334px 245px;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .header{
     display: flex;
     margin-bottom: 30px;
