--- a/all.css
+++ b/all.css
@@ -129,21 +129,24 @@ h2{
     margin: 0 auto;
     padding-right: 16px;
     padding-left: 16px;
-}
+}/*1366-139-139+16+16*/
 @media(max-width:992px){
     .wrap{
+        max-width: 748px;
         margin: 0 auto;
-        padding-right: 20px;
-        padding-left: 20px; 
+        padding-right: 16px;
+        padding-left: 16px; 
     }
-}
+}/*992-139-139+16+16*/
 @media(max-width:767px){
     .wrap{
+        max-width: 747px;
         margin: 0 auto;
-        padding-right: 20px;
-        padding-left: 20px; 
+        padding-right: 10px;
+        padding-left: 10px; 
     }
 }
+/*375-20-20+10+10*/
 .top{
     background-image: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/bg_home.svg");
     background-repeat: no-repeat;
@@ -453,14 +456,14 @@ h2{
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.review-item{
+.review-item1, .review-item2, .review-item3{
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 2px 10px #00000014;
     border-radius: 12px;
     position: relative;
     width: 33%;
 }
-.review-item img{
+.review-item1 img, .review-item2 img, .review-item3 img{
     width: 86px;
     height: 86px;
     border-radius: 50%;
@@ -468,21 +471,21 @@ h2{
     top: -40px;
     left: 10px;
 }
-.review-item p{
+.review-item1 p, .review-item2 p, .review-item3 p{
     font-size: 16px;
     text-align: left;
 }
-.review-item .p1{
+.review-item1 .p1, .review-item2 .p1, .review-item3 .p1{
     padding: 48px 32px 48px 32px;
 }
-.review-item h4{
+.review-item1 h4, .review-item2 h4, .review-item3 h4{
     font-size: 16px;
     padding-left: 32px;
     text-align: left;
     font-weight: bold;
     padding-bottom: 8px;
 }
-.review-item .p2{
+.review-item1 .p2, .review-item2 .p2, .review-item3 .p2{
     padding-left: 32px;
     padding-bottom: 24px;
 }
@@ -499,33 +502,36 @@ h2{
     width: 16px;
 }*/
 
-@media(max-width:357px){
+@media(max-width:767px){
     .review{
         margin-bottom: 60px;
+    
     }
     .review h3{
         font-size: 28px;
         padding-bottom: 32px;
     }
-    .review-item{
-        position: relative;
-        width: 100%;
+    .reviewmenu{
+        flex-direction: column;
+        
     }
-    .review-item img{
+    .review-item2, .review-item3{
+        display: none;
+    }
+    /*.review-item1 img{
         position: absolute;
-        top: -25%;
-    }
-    .review-item p{
+    }*/
+    .review-item1 p{
         font-size: 16px;
         text-align: left;
     }
     .review-item .p1{
         padding: 48px 16px 32px 16px;
     }
-    .review-item h4{
+    .review-item1 h4{
         padding-left: 16px
     }
-    .review-item .p2{
+    .review-item1 .p2{
         padding-left: 16px;
         padding-bottom: 16px;
     }
